--- a/Index.html
+++ b/Index.html
@@ -15,8 +15,7 @@
                 <li>
                     <div class="search-container">
                         <div class="search-box">
-                            
-                            <ion-icon name="search-outline"></ion-icon>
+                            <i class="fa fa-search"></i>
                             <input type="text" placeholder="Search">
                             
                         </div>
@@ -24,6 +23,15 @@
                     </div>
                 </li>
           </ul>
+        </nav>
+        <nav class="navbar2">
+            <ul class="btn">
+                <button id="home">Home</button>
+                <button id="doc">Find Doctor</button>
+                <button id="services">Services</button>
+                <button id="Consultancy">Consultancy</button>
+                <button id="lgsu">Login/SignUp</button>
+            </ul>
         </nav>
     </div>
 </body>
