--- a/Index.html
+++ b/Index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MediSearch</title>
     <link rel="stylesheet" href="Style.css">
-  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container">
         <nav class="navbar">
           <ul>
-                <li class="logo">MediSearch</li>
+                <li class="logo">MediSearch <i class="fa fa-stethoscope" style="font-size:48px;color:rgb(255, 255, 255)"></i></li>
+                
                 <li>
                     <div class="search-container">
                         <div class="search-box">
@@ -33,6 +34,10 @@
                 <button id="lgsu">Login/SignUp</button>
             </ul>
         </nav>
+        <div class="bgimg">
+            <img src="BG.webp" alt="" height="792px">
+        </div>
+        
     </div>
 </body>
 </html>
