--- a/Index.html
+++ b/Index.html
@@ -15,23 +15,29 @@
                 
                 <li>
                     <div class="search-container">
-                        <div class="search-box">
-                            <i class="fa fa-search"></i>
-                            <input type="text" placeholder="Search">
-                            
+                        <div id="search-box">
+                            <div class="searchbar">
+                                <i class="fa fa-search"></i>
+                                <input type="text" placeholder="Search">
+                            </div>
+                        </div>
                         </div>
                         </div>
                     </div>
                 </li>
           </ul>
         </nav>
+        <br>
+        <br>
+        <br>
+        <br>
         <nav class="navbar2">
             <ul class="btn">
-                <button id="home">Home</button>
-                <button id="doc">Find Doctor</button>
-                <button id="services">Services</button>
-                <button id="Consultancy">Consultancy</button>
-                <button id="lgsu">Login/SignUp</button>
+                <button id="home" class="btn">Home</button>
+                <button id="doc" class="btn">Find Doctor</button>
+                <button id="services" class="btn">Services</button>
+                <button id="consultancy" class="btn">Consultancy</button>
+                <button id="lgsu" class="btn">Login/SignUp</button>
             </ul>
         </nav>
         <div class="bgimg">
