--- a/Index.html
+++ b/Index.html
@@ -45,10 +45,36 @@
           </div>
         </div>  
         
-
-  
-
+        <nav class="navbar3">
+            <ul style="list-style-type:none;">
+               <li> <h2>> Schedule your appointment online</h2> </li>
+               <li><button class="book_btn">Book an appointment</button></li>
+            </ul>
+        </nav>
         
+        <div class="docs">
+            <h2>Taking care of your health</h2>
+            <ul class="medicons">
+                <li><div class="calender"><i class="fa fa-calendar" style="font-size:36px"></i>
+                <h3>Make appointments</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut dolor a hic animi libero atque placeat illum recusandae!</p></div></li>
+
+                <li><div class="hospital">
+                    <i class="fa fa-hospital-o" style="font-size:36px;"></i><h3>Find Medical Centers</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut dolor a hic animi libero atque placeat illum recusandae!</p></div></li>
+
+                <li><div class="usermd"><i class="fa fa-user-md" style="font-size:36px;"></i><h3>Find Doctor by Speciality</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut dolor a hic animi libero atque placeat illum recusandae!</p></div></li>
+            </ul>
+        </div>
+
+        <nav class="footer">
+            <ul style="list-style-type:none;">
+               <li> <h3>About Us</h3> </li>
+               <li> <h3>FAQs</h3> </li>
+               <li> <h3>Contact </h3> </li>
+            </ul>
+        </nav>
     </div>
 </body>
 </html>
